RESOLVED FIXED204069
OverConstrainedError is missing 'name' property
https://bugs.webkit.org/show_bug.cgi?id=204069
Summary OverConstrainedError is missing 'name' property
Eric Carlson
Reported 2019-11-11 07:40:51 PST
OverconstrainedError.name returns "Error", but spec says: The initial value of the name property of the prototype for the OverconstrainedError constructor is "OverconstrainedError". https://w3c.github.io/mediacapture-main/#overconstrainederror-prototype-name
Attachments
Patch (7.93 KB, patch)
2019-11-18 11:05 PST, Eric Carlson
no flags
Patch (9.42 KB, patch)
2019-11-19 05:40 PST, Eric Carlson
no flags
Eric Carlson
Comment 1 2019-11-18 11:05:07 PST
youenn fablet
Comment 2 2019-11-18 17:02:18 PST
Comment on attachment 383763 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=383763&action=review > Source/WebCore/ChangeLog:8 > + No new tests, existing test and results updated. There is one failing test on Mac that probably needs to get updated. > LayoutTests/imported/w3c/web-platform-tests/mediacapture-streams/GUM-impossible-constraint.https-expected.txt:8 > +FAIL Tests that setting an impossible constraint in getUserMedia fails assert_equals: The name of the not satisfied error is given in error.constraint expected "width" but got "" We should look at these tests, maybe we should update them since we are not exposing the constraint if device info is not granted.
Eric Carlson
Comment 3 2019-11-19 05:40:06 PST
WebKit Commit Bot
Comment 4 2019-11-19 08:51:03 PST
Comment on attachment 383861 [details] Patch Clearing flags on attachment: 383861 Committed r252632: <https://trac.webkit.org/changeset/252632>
WebKit Commit Bot
Comment 5 2019-11-19 08:51:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-11-19 08:52:22 PST
Note You need to log in before you can comment on or make changes to this bug.