OverConstrainedError is missing 'name' property https://bugs.webkit.org/show_bug.cgi?id=204069

Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

* web-platform-tests/mediacapture-streams/GUM-impossible-constraint.https-expected.txt:
* web-platform-tests/mediacapture-streams/GUM-invalid-facing-mode.https-expected.txt:
* web-platform-tests/mediacapture-streams/MediaStreamTrack-applyConstraints.https-expected.txt:

Source/WebCore:

No new tests, existing test and results updated.

* Modules/mediastream/OverconstrainedError.h:
(WebCore::OverconstrainedError::name const):
* Modules/mediastream/OverconstrainedError.idl:

LayoutTests:

* fast/mediastream/MediaDevices-getUserMedia.html:
* fast/mediastream/overconstrainederror-constraint.html:


Canonical link: https://commits.webkit.org/217626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252632 268f45cc-cd09-0410-ab3c-d52691b4dbfc